# programming.monster

./: .babelrc  .dockerignore  .env-template  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  setup.cfg  tsconfig.json  uwsgi.ini  uwsgi_docker.ini  webpack.config.js
.github/actions/build-container/: action.yml
.github/workflows/: ci-build.yml  ci-test.yml  lint.yml
apps/articles/: models.py  views.py
apps/articles/jinja2/articles/: about.html  article.html  article_index.html  home.html
apps/articles/migrations/: 0001_initial.py  0002_auto_20200113_0129.py  0003_articlepage.py  0004_articleindexpage.py  0005_auto_20200115_0313.py
apps/base/: fields.py  models.py
apps/base/jinja2/base/: base.html  macro.html
apps/base/wagtail/: blocks.py
apps/users/migrations/: 0001_initial.py
deploy/: iptables.template
deploy/ansible/: hosts  vars.json
deploy/ansible/play/: deploy.yml  deploy_config.yml  dump_db.yml  test.yml
deploy/scripts/: restore_local_db.sh
docker/base/: Dockerfile
frontend/: main.js  main.ts
frontend/css/: main.css
promonster/: context_processors.py  storage.py  urls.py  wsgi.py
promonster/environment/: jinja.py
promonster/settings/: _utils.py  base.py  main.py
promonster/static/: robots.txt
promonster/static/css/: bulmastyle.min.css
tests/: test_example.py
