[tool.poetry]
name = "programming.monster"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.28"
psycopg2-binary = "2.8.4"
python-dotenv = "0.10.3"
sentry-sdk = "0.14.0"
Jinja2 = "2.10"
Babel = "2.7"
python-slugify = "3.0"
djangorestframework = "3.11.0"
wagtail = "2.7.1"
Markdown = "3.1.1"
Pygments = "2.5.2"

[tool.poetry.dev-dependencies]
pytest = "5.4.1"
django-debug-toolbar = "^2.0"
ansible = "2.9.2"
pyyaml = "^5.1"
ipython = "^7.11.1"
flake8 = "^3.7.9"
